# ResumeRepo

./: NoIR Camera  README.md
ROS/: README.md
ROS/devel/: _setup_util.py  local_setup.sh  setup.sh
ROS/src/: HowToRun.md  README.md
ROS/src/triphy_description/: CMakeLists.txt  package.xml
ROS/src/triphy_description/config/: config.yaml
ROS/src/triphy_description/launch/: spawn_triphy.launch
ROS/src/triphy_description/meshes/: base_link.stl  left_back_prop_1.stl  left_back_wheel_1.stl  left_front_prop_1.stl  left_front_wheel_1.stl  quadcopter_1.stl  right_back_prop_1.stl  right_back_wheel_1.stl  right_front_prop_1.stl  right_front_wheel_1.stl
ROS/src/triphy_description/urdf/: triphy.urdf
turtlesim_race/: CMakeLists.txt  README.md  package.xml
turtlesim_race/src/: Overtake.cpp
virat_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
virat_ws/devel/lib/pkgconfig/: virat_description.pc  virat_gazebo.pc  virat_potholes.pc  virat_teleop.pc
virat_ws/devel/lib/virat_potholes/: virat_potholes  virat_potholes_pcl
virat_ws/devel/lib/virat_teleop/: virat_teleop
virat_ws/src/virat_gazebo/: CMakeLists.txt  README.md  package.xml
virat_ws/src/virat_gazebo/launch/: grass_world.launch  virat_gazebo.launch
virat_ws/src/virat_gazebo/worlds/: grass_world.world
virat_ws/src/virat_potholes/: CMakeLists.txt  README.md  package.xml
virat_ws/src/virat_potholes/include/: detect_potholes_pcl.hpp
virat_ws/src/virat_potholes/src/: detect_potholes.cpp  detect_potholes_pcl.cpp  main.cpp  (+1 more)
virat_ws/src/virat_teleop/: CMakeLists.txt  README.md  package.xml
(+11 files in other folders)
